# ChangeLog for games-emulation/zinc
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/zinc/ChangeLog,v 1.4 2004/07/01 11:16:17 eradicator Exp $

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> zinc-0.9.ebuild:
  virtual/glibc -> virtual/libc

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*zinc-0.9 (9 Jul 2002)

  16 Oct 2002; Mike Frysinger <vapier@gentoo.org> :
  removed src_unpack check for ARCH since we have KEYWORDS now
  updated the DEPEND variable

  06 Aug 2002; Mark Guertin <gerk@gentoo.org> :
  Added -ppc -sparc -sparc64 to keywords

  9 Jul 2002; Ryan Phillips <rphillips@gentoo.org> ChangeLog :
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.