@@ -1,6 +1,11 @@
 # ChangeLog for games-emulation/zinc
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/zinc/ChangeLog,v 1.4 2004/07/01 11:16:17 eradicator Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/zinc/ChangeLog,v 1.5 2005/01/28 19:31:14 mr_bones_ Exp $
+
+*zinc-1.1 (28 Jan 2005)
+
+  28 Jan 2005; Michael Sterrett <mr_bones_@gentoo.org> +zinc-1.1.ebuild:
+  version bump (bug #79677)
 
   01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> zinc-0.9.ebuild:
   virtual/glibc -> virtual/libc
